settings profile pic upload fixes. group chat alignment css

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -301,6 +301,7 @@ $tabs-height:                     56px;
 .uploadNewProfilePicSpinner {
   margin-left: auto;
   margin-right: auto;
+  margin-top: auto;
 }
 
 
